--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,16 +10,20 @@
     "lint": "eslint . --ext .ts,.vue"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
+    "@vueuse/core": "^10.11.1",
+    "axios": "^1.13.2",
+    "naive-ui": "^2.43.2",
+    "pinia": "^2.3.1",
     "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.0",
-    "@vueuse/core": "^10.7.0"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^5.0.0",
+    "sass": "^1.97.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0"
+    "vue-tsc": "^3.2.1"
   }
 }
