--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ build/
 # Database
 *.db
 *.db-journal
-prisma/dev.db
-prisma/dev.db-journal
+*.db-shm
+*.db-wal
 
 # Logs
 logs/
@@ -40,10 +40,5 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
-
-# Prisma
-packages/server/prisma/migrations/
-packages/server/prisma/dev.db
-packages/server/prisma/dev.db-journal
 
 /uploads/
