--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,8 +7,10 @@
     "dev": "nest start --watch",
     "start": "node dist/src/main.js",
     "lint": "eslint . --ext .ts",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "db:init": "node scripts/init-db.js",
+    "db:init:ts": "ts-node src/database/init-db.ts",
+    "db:migrate": "ts-node -e \"const { DatabaseService } = require('./dist/src/database/database.service'); const { runMigrations } = require('./dist/src/database/migrator'); const db = new DatabaseService(); db.onModuleInit().then(() => { runMigrations(db); db.onModuleDestroy(); });\"",
+    "db:test-restructure": "ts-node src/database/test-restructure.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
@@ -17,7 +19,6 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
-    "@prisma/adapter-better-sqlite3": "^7.2.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.5.0",
     "class-transformer": "^0.5.1",
@@ -33,9 +34,8 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
-    "@prisma/client": "^7.2.0",
-    "@prisma/config": "^7.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^12.5.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "@types/passport-jwt": "^3.0.13",
@@ -43,7 +43,6 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
-    "prisma": "^7.2.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
