feat: implement tag management API and integrate with page content
- Added tag API for CRUD operations on tags.
- Created Sidebar component for library and page navigation.
- Developed TopNavigation component for header with user options and search functionality.
- Implemented MainLayout to structure the application layout with sidebar and top navigation.
- Enhanced PageContent view to manage page details, including title editing and tag management.
- Integrated loading states and error handling for API calls.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "concurrently \"pnpm --filter server dev\" \"pnpm --filter client dev\"",
     "build": "pnpm --filter server build && pnpm --filter client build",
     "lint": "pnpm --filter server lint && pnpm --filter client lint",
-    "start": "pnpm --filter server start"
+    "start": "pnpm --filter server start",
+    "dev:server": "pnpm --filter server dev",
+    "dev:client": "pnpm --filter client dev"
   },
   "keywords": [],
   "author": "",
