--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,11 +10,26 @@
     "lint": "eslint . --ext .ts,.vue"
   },
   "dependencies": {
+    "@tiptap/core": "^3.14.0",
+    "@tiptap/extension-bubble-menu": "^3.14.0",
+    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-mention": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-task-item": "^3.14.0",
+    "@tiptap/extension-task-list": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "@tiptap/suggestion": "^3.14.0",
+    "@tiptap/vue-3": "^3.14.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vueuse/core": "^10.11.1",
     "axios": "^1.13.2",
+    "lowlight": "^3.3.0",
     "naive-ui": "^2.43.2",
     "pinia": "^2.3.1",
+    "tippy.js": "^6.3.7",
     "vue": "^3.4.0",
     "vue-router": "^4.6.4"
   },
