--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,7 @@
     "@vueuse/core": "^10.11.1",
     "axios": "^1.13.2",
     "lowlight": "^3.3.0",
+    "marked": "^17.0.1",
     "naive-ui": "^2.43.2",
     "pinia": "^2.3.1",
     "tippy.js": "^6.3.7",
