--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -37,6 +37,7 @@
     "@nestjs/testing": "^10.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.0",
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^4.17.21",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.11.0",
