--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.vue"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
     "@tiptap/core": "^3.14.0",
     "@tiptap/extension-bubble-menu": "^3.14.0",
     "@tiptap/extension-code-block-lowlight": "^3.14.0",
