--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ NODE_ENV=development
 PORT=3000
 
 # Database
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="./schema.db"
 
 # JWT configuration
 JWT_SECRET=your-super-secret-key-change-in-production
 JWT_EXPIRES_IN=7d
 
 # File upload
-UPLOAD_DIR=./uploads
+UPLOAD_DIR="./uploads"
 MAX_FILE_SIZE=10485760
